[package]
name = "rustblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
hex = "0.4"
libp2p = { version = "0.41", features = ["tcp-tokio", "mdns"] }
once_cell = "1.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
tokio = { version = "1.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
